# Project-Raphael

./: README.md  compact-index.html  package-lock.json  package.json
src/: Animation.tsx  App.tsx  CompactApp.tsx  compact.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  plugin_manager.rs
src/compact/: default.tsx
src/main/: ChatMenu.tsx  DefaultMenu.tsx  IdleMenu.tsx  MainMenu.tsx  OptionsMenu.tsx  SettingsMenu.tsx  default.tsx  main.tsx
src/plugins/: PluginManager.ts  PluginsSystem.tsx
src/shaders/: FragmentShader.ts  VertexShader.ts
src/styles/: ChatMenu.css  IdleMenu.css  OptionsMenu.css  compact.css  default.css  global.css  main.css
src/utils/: generateUUID.tsx  githubRateLimits.tsx  toCamelCase.ts
